Move apr_config.h and apr_config.hw to apr_private.h and apr_private.hw. This should make the fact that this is a private header file more obvious. This also updates all of the references to apr_config.h
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59924 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -19,7 +19,7 @@ MODULES="file_io network_io threadproc misc locks time mmap shmem dso i18n"
 
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(configure.in)
-AC_CONFIG_HEADER(include/apr_config.h)
+AC_CONFIG_HEADER(include/apr_private.h)
 
 # Most platforms use a prefix of 'lib' on their library files.
 LIBPREFIX='lib'
