--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -54,31 +54,37 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-proc.o: proc.c threadproc.h $(INCDIR)/apr_config.h \
+proc.o: proc.c threadproc.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
  ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_lock.h
-procsup.o: procsup.c threadproc.h $(INCDIR)/apr_config.h \
+procsup.o: procsup.c threadproc.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
  ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h
-signals.o: signals.c threadproc.h $(INCDIR)/apr_config.h \
+signals.o: signals.c threadproc.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
  ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h
-thread.o: thread.c threadproc.h $(INCDIR)/apr_config.h \
+thread.o: thread.c threadproc.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
  ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_lock.h
-threadpriv.o: threadpriv.c threadproc.h $(INCDIR)/apr_config.h \
+threadcancel.o: threadcancel.c threadproc.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h ../../file_io/unix/fileio.h \
+ $(INCDIR)/apr_lib.h
+threadpriv.o: threadpriv.c threadproc.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
