--- a/Makefile.in
+++ b/Makefile.in
@@ -56,7 +56,7 @@ clean: subdirs_clean
 depend: subdirs_depend
 
 distclean: subdirs_distclean
-	-$(RM) -f include/apr.h include/apr_config.h
+	-$(RM) -f include/apr.h include/apr_private.h
 	-$(RM) -f *.o *.a *.so
 	-$(RM) -f config.cache config.status config.log
 	-$(RM) -f Makefile
