--- a/file_io/beos/Makefile.in
+++ b/file_io/beos/Makefile.in
@@ -50,14 +50,14 @@ depend:
 
 # DO NOT REMOVE
 file_io_common.o: file_io_common.c ../unix/dir.c ../unix/fileio.h \
- ../../include/apr_config.h ../../include/apr_general.h \
+ ../../include/apr_private.h ../../include/apr_general.h \
  ../../include/apr.h ../../include/apr_errno.h \
  ../../include/apr_file_io.h ../../include/apr_lib.h \
  ../../include/apr_portable.h ../../include/apr_thread_proc.h \
  ../../include/apr_network_io.h ../../include/apr_lock.h \
  ../../include/apr_time.h ../unix/fileacc.c ../unix/filedup.c \
  ../unix/filestat.c ../unix/open.c ../unix/pipe.c ../unix/seek.c
-readwrite.o: readwrite.c ../unix/fileio.h ../../include/apr_config.h \
+readwrite.o: readwrite.c ../unix/fileio.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_file_io.h \
  ../../include/apr_lib.h
