--- a/i18n/unix/Makefile.in
+++ b/i18n/unix/Makefile.in
@@ -38,7 +38,7 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-xlate.o: xlate.c $(INCDIR)/apr_config.h $(INCDIR)/apr_lib.h \
+xlate.o: xlate.c $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
