--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -59,38 +59,38 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-apr_cpystrn.o: apr_cpystrn.c $(INCDIR)/apr_config.h \
+apr_cpystrn.o: apr_cpystrn.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
-apr_execve.o: apr_execve.c $(INCDIR)/apr_config.h
-apr_fnmatch.o: apr_fnmatch.c $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_fnmatch.h $(INCDIR)/apr_errno.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h \
+apr_execve.o: apr_execve.c $(INCDIR)/apr_private.h
+apr_fnmatch.o: apr_fnmatch.c $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_fnmatch.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
-apr_getpass.o: apr_getpass.c $(INCDIR)/apr_config.h \
+apr_getpass.o: apr_getpass.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
-apr_md5.o: apr_md5.c $(INCDIR)/apr_config.h $(INCDIR)/apr_md5.h \
+apr_md5.o: apr_md5.c $(INCDIR)/apr_private.h $(INCDIR)/apr_md5.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
-apr_pools.o: apr_pools.c $(INCDIR)/apr_config.h \
+apr_pools.o: apr_pools.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_lock.h ../misc/unix/misc.h $(INCDIR)/apr_getopt.h
-apr_signal.o: apr_signal.c $(INCDIR)/apr_config.h \
+apr_signal.o: apr_signal.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
-apr_snprintf.o: apr_snprintf.c $(INCDIR)/apr_config.h \
+apr_snprintf.o: apr_snprintf.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
-apr_tables.o: apr_tables.c $(INCDIR)/apr_config.h \
+apr_tables.o: apr_tables.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
