--- a/locks/beos/Makefile.in
+++ b/locks/beos/Makefile.in
@@ -52,13 +52,13 @@ depend:
 
 # DO NOT REMOVE
 crossproc.o: crossproc.c ../../include/apr_lock.h \
- ../../include/apr_general.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr_private.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h locks.h
 intraproc.o: intraproc.c ../../include/apr_lock.h \
- ../../include/apr_general.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr_private.h \
  ../../include/apr_errno.h locks.h ../../include/apr_file_io.h \
  ../../include/apr_lib.h
 locks.o: locks.c ../../include/apr_lock.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h locks.h \
+ ../../include/apr_private.h ../../include/apr_errno.h locks.h \
  ../../include/apr_file_io.h
