--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -52,17 +52,17 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-crossproc.o: crossproc.c locks.h ../../include/apr_config.h \
+crossproc.o: crossproc.c locks.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h ../../include/apr_time.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h
-intraproc.o: intraproc.c locks.h ../../include/apr_config.h \
+intraproc.o: intraproc.c locks.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h ../../include/apr_time.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h
-locks.o: locks.c locks.h ../../include/apr_config.h \
+locks.o: locks.c locks.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h ../../include/apr_time.h \
