--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -52,21 +52,40 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
+canonerr.o: canonerr.c misc.h ../../include/apr.h \
+ ../../include/apr_private.h ../../include/apr_general.h \
+ ../../include/apr_errno.h ../../include/apr_pools.h \
+ ../../include/apr_lib.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_thread_proc.h \
+ ../../include/apr_getopt.h
+errorcodes.o: errorcodes.c misc.h ../../include/apr.h \
+ ../../include/apr_private.h ../../include/apr_general.h \
+ ../../include/apr_errno.h ../../include/apr_pools.h \
+ ../../include/apr_lib.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_thread_proc.h \
+ ../../include/apr_getopt.h
 getopt.o: getopt.c misc.h ../../include/apr.h \
- ../../include/apr_config.h ../../include/apr_general.h \
+ ../../include/apr_private.h ../../include/apr_general.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_lib.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_thread_proc.h \
  ../../include/apr_getopt.h
 otherchild.o: otherchild.c misc.h ../../include/apr.h \
- ../../include/apr_config.h ../../include/apr_general.h \
+ ../../include/apr_private.h ../../include/apr_general.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_lib.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_thread_proc.h \
- ../../include/apr_getopt.h
-start.o: start.c misc.h ../../include/apr.h ../../include/apr_config.h \
+ ../../include/apr_getopt.h ../../threadproc/unix/threadproc.h \
+ ../../file_io/unix/fileio.h
+rand.o: rand.c misc.h ../../include/apr.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr_errno.h \
  ../../include/apr_pools.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h ../../include/apr_time.h \
- ../../include/apr_thread_proc.h ../../include/apr_getopt.h \
- ../../locks/unix/locks.h ../../include/apr_lock.h
+ ../../include/apr_thread_proc.h ../../include/apr_getopt.h
+start.o: start.c misc.h ../../include/apr.h \
+ ../../include/apr_private.h ../../include/apr_general.h \
+ ../../include/apr_errno.h ../../include/apr_pools.h \
+ ../../include/apr_lib.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_thread_proc.h \
+ ../../include/apr_getopt.h ../../locks/unix/locks.h \
+ ../../include/apr_lock.h
