--- a/mmap/beos/Makefile.in
+++ b/mmap/beos/Makefile.in
@@ -55,7 +55,7 @@ mmap.o: mmap.c mmap_h.h ../../include/apr_general.h \
  ../../include/apr_file_io.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_time.h ../../include/apr_lib.h \
- ../../file_io/unix/fileio.h ../../include/apr_config.h
+ ../../file_io/unix/fileio.h ../../include/apr_private.h
 mmap_common.o: mmap_common.c ../unix/common.c ../unix/../beos/mmap_h.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_mmap.h \
