--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -50,14 +50,14 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-common.o: common.c mmap_h.h ../../include/apr_config.h \
+common.o: common.c mmap_h.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_mmap.h \
  ../../include/apr_network_io.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../file_io/unix/fileio.h ../../include/apr_lib.h
-mmap.o: mmap.c mmap_h.h ../../include/apr_config.h \
+mmap.o: mmap.c mmap_h.h ../../include/apr_private.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_mmap.h \
  ../../include/apr_network_io.h ../../include/apr_file_io.h \
