--- a/network_io/beos/Makefile.in
+++ b/network_io/beos/Makefile.in
@@ -59,39 +59,39 @@ inet_aton.o: inet_aton.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_lib.h ../../file_io/unix/fileio.h \
- ../../include/apr_config.h
+ ../../include/apr_private.h
 poll.o: poll.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_lib.h ../../file_io/unix/fileio.h \
- ../../include/apr_config.h
+ ../../include/apr_private.h
 sendrecv.o: sendrecv.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_lib.h ../../file_io/unix/fileio.h \
- ../../include/apr_config.h
+ ../../include/apr_private.h
 sockaddr.o: sockaddr.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_lib.h ../../file_io/unix/fileio.h \
- ../../include/apr_config.h
+ ../../include/apr_private.h
 sockets.o: sockets.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_lib.h ../../file_io/unix/fileio.h \
- ../../include/apr_config.h
+ ../../include/apr_private.h
 sockopt.o: sockopt.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_lock.h \
  ../../include/apr_lib.h ../../file_io/unix/fileio.h \
- ../../include/apr_config.h
+ ../../include/apr_private.h
