--- a/network_io/os2/Makefile.in
+++ b/network_io/os2/Makefile.in
@@ -73,7 +73,7 @@ sendrecv.o: sendrecv.c networkio.h $(INCDIR1)/apr_network_io.h \
  $(INCDIR1)/apr_time.h os2calls.h $(INCDIR1)/apr_lib.h \
  $(INCDIR1)/apr_thread_proc.h
 sockaddr.o: sockaddr.c ../unix/sockaddr.c ../unix/networkio.h \
- $(INCDIR1)/apr_config.h $(INCDIR1)/apr_network_io.h \
+ $(INCDIR1)/apr_private.h $(INCDIR1)/apr_network_io.h \
  $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
  $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
  $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
