--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -53,29 +53,29 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-poll.o: poll.c networkio.h $(INCDIR)/apr_config.h \
+poll.o: poll.c networkio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h
-sendrecv.o: sendrecv.c networkio.h $(INCDIR)/apr_config.h \
+sendrecv.o: sendrecv.c networkio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h \
  ../../file_io/unix/fileio.h
-sockaddr.o: sockaddr.c networkio.h $(INCDIR)/apr_config.h \
+sockaddr.o: sockaddr.c networkio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h
-sockets.o: sockets.c networkio.h $(INCDIR)/apr_config.h \
+sockets.o: sockets.c networkio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_lock.h
-sockopt.o: sockopt.c networkio.h $(INCDIR)/apr_config.h \
+sockopt.o: sockopt.c networkio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
