--- a/threadproc/beos/Makefile.in
+++ b/threadproc/beos/Makefile.in
@@ -63,34 +63,34 @@ proc.o: proc.c threadproc.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_time.h ../../file_io/unix/fileio.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_lock.h
 procsup.o: procsup.c threadproc.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_time.h ../../file_io/unix/fileio.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_lock.h
 signals.o: signals.c threadproc.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_time.h ../../file_io/unix/fileio.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_lock.h
 thread.o: thread.c threadproc.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_time.h ../../file_io/unix/fileio.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_lock.h
 threadpriv.o: threadpriv.c threadproc.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_config.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_portable.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h
