Bring BeOS APR back into a working state.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59928 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/beos/Makefile.in
+++ b/misc/beos/Makefile.in
@@ -9,7 +9,8 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCDIR1=../../file_io/unix
+INCDIR1=../../file_io/unix -I../../locks/beos -I../../threadproc/beos
+
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=libmisc.a
