Add `IndexOptions +VersionSort', to nicely sort filenames containing version numbers.
Submitted by:	Martin Pool <mbp@linuxcare.com.au>


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59940 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -24,7 +24,8 @@ OBJS=apr_cpystrn.o \
 	apr_signal.o \
 	apr_snprintf.o \
 	apr_tables.o \
-	apr_getpass.o
+	apr_getpass.o \
+	apr_strnatcmp.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
