--- a/configure.in
+++ b/configure.in
@@ -67,12 +67,12 @@ case "$OS" in
        CFLAGS="$CFLAGS -DOS2 -Zmt"
        OSDIR="os2"
        LIBPREFIX=""
-       enable_threads="system_threads"
+       enable_apr_threads="system_threads"
        ;;
    *beos*)
        OSDIR="beos"
        CFLAGS="$CFLAGS -DBEOS"
-       enable_threads="system_threads"
+       enable_apr_threads="system_threads"
        config_subdirs="shmem/unix/mm"
        ;;
    *)
@@ -296,7 +296,7 @@ AC_SUBST(ssize_t_fmt)
 AC_SUBST(off_t_fmt) 
 
 dnl #----------------------------- Checking for Threads
-echo $ac_n "${nl}Checking for Threads..."
+echo $ac_n "${nl}Checking for Threads...${nl}"
 AC_CACHE_CHECK([for threads], ac_cv_enable_threads,
   [ AC_ARG_ENABLE(threads,
     [  --enable-threads  Enable threading support in APR.],
@@ -320,7 +320,7 @@ else
           AC_DEFINE(USE_THREADS) ], [
           threads="0"
           pthreadh="0" ] )
-    elif test "$ac_cv_enable_threads" = "system_threads"; then
+    elif test "$enable_apr_threads" = "system_threads"; then
           threads="1"
           pthreadh="0"
     else
@@ -340,10 +340,16 @@ fi
 ac_cv_define_READDIR_IS_THREAD_SAFE=no
 AC_CHECK_LIB(c_r, readdir, AC_DEFINE(READDIR_IS_THREAD_SAFE))
 
+if test "$threads" = "1"; then
+    echo "APR will use threads"
+else
+    echo "APR will be non-threaded"
+fi
+
 AC_SUBST(threads)
 
 dnl #----------------------------- Checking for MMAP 
-echo $ac_n "${nl}Checking for MMAP..."
+echo $ac_n "${nl}Checking for MMAP...${nl}"
 AC_FUNC_MMAP
 if test "$ac_cv_func_mmap_fixed_mapped" = "yes"; then
     mmap="1"
@@ -422,7 +428,7 @@ AC_SUBST(procpthreadser)
 AC_SUBST(pthreadser)
 
 dnl #----------------------------- Checking for Shared Memory Support 
-echo $ac_n "${nl}Checking for Shared Memory Support..."
+echo $ac_n "${nl}Checking for Shared Memory Support...${nl}"
 
 # run the MM config script regardless of whether we are going to use
 # it or not.  When we have a much better idea of who is using MM, we can
@@ -481,7 +487,7 @@ fi
 
 AC_SUBST(rand)
 dnl #----------------------------- Checking for Time Support 
-echo $ac_n "${nl}Checking for Time Support..."
+echo $ac_n "${nl}Checking for Time Support...${nl}"
 AC_CACHE_CHECK([for tm_gmtoff in struct tm], ac_cv_struct_tm_gmtoff,
 [AC_TRY_COMPILE([#include <sys/types.h>
 #include <$ac_cv_struct_tm>], [struct tm tm; tm.tm_gmtoff;],
