--- a/Makefile.in
+++ b/Makefile.in
@@ -56,11 +56,12 @@ clean: subdirs_clean
 depend: subdirs_depend
 
 distclean: subdirs_distclean
-	-$(RM) -f include/apr.h include/apr_private.h
+	-$(RM) -f include/apr.h include/apr_private.h include/apr_private.h.in
 	-$(RM) -f *.o *.a *.so
-	-$(RM) -f config.cache config.status config.log
+	-$(RM) -f config.cache config.status config.log configure
 	-$(RM) -f Makefile
 	-$(RM) -rf objs
+	cd test; make distclean; cd ..
 
 subdirs:
 	@for i in $(SUBDIRS); do \
