--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -66,8 +66,8 @@ apr_cpystrn.o: apr_cpystrn.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_thread_proc.h
 apr_execve.o: apr_execve.c $(INCDIR)/apr_private.h
 apr_fnmatch.o: apr_fnmatch.c $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_fnmatch.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_fnmatch.h $(INCDIR)/apr_errno.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
 apr_getpass.o: apr_getpass.c $(INCDIR)/apr_private.h \
@@ -93,6 +93,7 @@ apr_snprintf.o: apr_snprintf.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
+apr_strnatcmp.o: apr_strnatcmp.c $(INCDIR)/apr_strnatcmp.h
 apr_tables.o: apr_tables.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
