Use $(MAKE) instead of make in Makefiles.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59982 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -61,7 +61,7 @@ distclean: subdirs_distclean
 	-$(RM) -f config.cache config.status config.log configure
 	-$(RM) -f Makefile
 	-$(RM) -rf objs
-	cd test; make distclean; cd ..
+	cd test; $(MAKE) distclean; cd ..
 
 subdirs:
 	@for i in $(SUBDIRS); do \
