Teach ap_strerror() on Unix to handle resolver error codes. Update CHANGES to mention ap_strerror() fixes that will be in a4.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59988 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -125,6 +125,7 @@ AC_CHECK_FUNC(inet_network, [ inet_network="1" ], [ inet_network="0" ])
 AC_CHECK_FUNC(_getch)
 AC_CHECK_FUNCS(gmtime_r localtime_r)
 AC_CHECK_FUNCS(iconv, [ iconv="1" ], [ iconv="0" ])
+AC_CHECK_FUNCS(hstrerror)
 AC_SUBST(sendfile)
 AC_SUBST(fork)
 AC_SUBST(inet_addr)
