--- a/i18n/unix/Makefile.in
+++ b/i18n/unix/Makefile.in
@@ -25,7 +25,7 @@ $(OBJS): Makefile
 
 #
 # We really don't expect end users to use this rule.  It works only with
-# gcc, and rebuilds Makefile.tmpl.  You have to re-run Configure after
+# gcc, and rebuilds Makefile.in.  You have to re-run configure after
 # using it.
 #
 depend:
