--- a/locks/os2/Makefile.in
+++ b/locks/os2/Makefile.in
@@ -37,7 +37,7 @@ $(LIB): $(OBJS)
 
 #
 # We really don't expect end users to use this rule.  It works only with
-# gcc, and rebuilds Makefile.tmpl.  You have to re-run Configure after
+# gcc, and rebuilds Makefile.in.  You have to re-run configure after
 # using it.
 #
 depend:
