--- a/shmem/unix/Makefile.in
+++ b/shmem/unix/Makefile.in
@@ -12,7 +12,8 @@ LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../inc
 INCDIR1=../../include
 INCDIR2=../../misc/@OSDIR@
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -Imm -I.
+INCDIR3=mm
+INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I$(INCDIR3) -I.
 
 LIB=libshmem.a
 
@@ -25,17 +26,16 @@ all: $(LIB)
 
 clean:
 	$(RM) -f *.o *.a *.so
-	cd mm; $(MAKE) clean; cd ..
+	(cd mm && $(MAKE) clean)
 
 distclean: clean
 	-$(RM) -f Makefile
-	cd mm; $(MAKE) distclean; cd ..
+	(cd mm && $(MAKE) distclean)
 
-$(OBJS): Makefile
 
 $(LIB): $(OBJS)
 	$(RM) -f $@
-	cd mm; $(MAKE); cd ..
+	(cd mm && $(MAKE) libmm.la)
 	cp mm/mm_global.o mm/mm_alloc.o mm/mm_core.o mm/mm_lib.o mm/mm_vers.o .
 	$(AR) cr $@ $(OBJS)
 	$(RANLIB) $@
