Make a note about needing to fix this
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60002 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -20,6 +20,8 @@ abs_srcdir=`(cd $srcdir && pwd)`
 abs_builddir=`pwd`
 
 dnl Get location of helpers directory
+dnl XXX This assumes that APR "lives" under Apache.
+dnl XXX We'll need to fix this when we pull it out.
 abs_helpersdir=$abs_srcdir/helpers
 MKDIR=$abs_helpersdir/mkdir.sh
 
