Substitute sigthreadmask for pthread_sigmask, if necessary.
Note that the behaviour of sigprocmask in a multi-threaded program is
undefined. The AIX 4.3 documentation explicitly says "The
sigprocmask, sigsetmask, and sigblock subroutines must not be used in
a multi-threaded application."

This change allows us to build the Dexter and mpmt_pthread MPM on AIX.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60012 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -126,6 +126,7 @@ AC_CHECK_LIB(truerand,main)
 dnl #----------------------------- Checks for Any required Functions
 dnl Checks for library functions.
 AC_CHECK_FUNCS(pthread_sigmask)
+AC_CHECK_FUNCS(sigthreadmask)
 AC_CHECK_FUNCS(strcasecmp stricmp poll setsid)
 AC_CHECK_FUNCS(sigaction, [ have_sigaction="1" ], [ have_sigaction="0" ]) 
 AC_CHECK_FUNCS(writev)
