Initial hack of the Apache/APR "hints" file, which uses information from the 1.3.x builds and "preloads" various compile-time ENV vars, such as CC, CFLAGS, LIBS, etc... with values.
At present, the design is as follows:
	o First of all, we only use these hints if they haven't already
	  been set on the command line. For example:

	   % CC=c89 ./configure

	  will override the setting of CC in hints.m4. If this isn't
	  correct for some platforms, we can use the APR_ADDTO macro
	  instead.

	o If we set them, we also export them... This makes the
	  most sense at present, but we may rethink this. Methinks
	  another macro?? :)

	o In many cases, this is a straight grab from the 1.3.x
	  tree.

The hooks for Apache will come soon.
PR:
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60014 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -15,6 +15,9 @@ echo "Platform: ${OS}"
 dnl # Some initial steps for configuration.  We setup the default directory
 dnl # and which files are to be configured.
 
+dnl Preload
+APR_PRELOAD
+
 dnl Absolute source/build directory
 abs_srcdir=`(cd $srcdir && pwd)`
 abs_builddir=`pwd`
