Test for file readable rather than file exist.
Submitted by:	Brian Martin <bmartin@penguincomputing.com>


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60016 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -503,7 +503,7 @@ if test -r "/dev/random"; then
     AC_DEFINE(DEV_RANDOM, [/dev/random])
     AC_MSG_RESULT(/dev/random)
     rand="1"
-elif test -f "/dev/urandom"; then
+elif test -r "/dev/urandom"; then
     AC_DEFINE(DEV_RANDOM, [/dev/urandom])
     AC_MSG_RESULT(/dev/urandom)
     rand="1"
