helpers directory has been copied to apr/helpers.  The configure script should now be using APR's copies of the helpers scripts.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60017 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -25,7 +25,7 @@ abs_builddir=`pwd`
 dnl Get location of helpers directory
 dnl XXX This assumes that APR "lives" under Apache.
 dnl XXX We'll need to fix this when we pull it out.
-abs_helpersdir=$abs_srcdir/../../helpers
+abs_helpersdir=$abs_srcdir/helpers
 MKDIR=$abs_helpersdir/mkdir.sh
 
 if test "$abs_builddir" != "$abs_srcdir"; then
