--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -24,6 +24,7 @@ OBJS=apr_cpystrn.o \
 	apr_signal.o \
 	apr_snprintf.o \
 	apr_tables.o \
+	apr_hash.o \
 	apr_getpass.o \
 	apr_strnatcmp.o
 
@@ -73,6 +74,11 @@ apr_getpass.o: apr_getpass.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_thread_proc.h
+apr_hash.o: apr_hash.c $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_hash.h
 apr_md5.o: apr_md5.c $(INCDIR)/apr_private.h $(INCDIR)/apr_md5.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
