--- a/configure.in
+++ b/configure.in
@@ -356,6 +356,7 @@ else
 fi
 
 APR_CHECK_PTHREAD_GETSPECIFIC_TWO_ARGS
+APR_CHECK_PTHREAD_ATTR_GETDETACHSTATE_ONE_ARG
 
 ac_cv_define_READDIR_IS_THREAD_SAFE=no
 AC_CHECK_LIB(c_r, readdir, AC_DEFINE(READDIR_IS_THREAD_SAFE))
